--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -232,7 +232,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="AmbassadorViewController" id="eUy-cF-6ME" customClass="AmbassadorViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="PTg-gA-Ub4">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="492"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -322,6 +322,9 @@
                                                     <state key="normal" title="INVITE MORE PEOPLE">
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="inviteFrendsTapped:" destination="eUy-cF-6ME" eventType="touchUpInside" id="UG6-16-uuH"/>
+                                                    </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7wP-wc-Qp3">
                                                     <rect key="frame" x="10" y="43" width="300" height="30"/>
@@ -341,7 +344,7 @@
                         </connections>
                     </tableView>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="568"/>
+                    <size key="freeformSize" width="320" height="492"/>
                     <connections>
                         <outlet property="allTimeButton" destination="qQT-ov-5ce" id="q2j-ph-OV5"/>
                         <outlet property="campusNotifButton" destination="7wP-wc-Qp3" id="Ji6-fs-pu2"/>
