--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="r0s-iy-1wR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="gcK-hO-ozh">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -168,6 +168,7 @@
         <!--Who-->
         <scene sceneID="5Z6-ag-ZQ1">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vOb-gn-Bt7" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController id="5D7-fp-3iF" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Who" image="peopleIcon.png" id="t73-in-thS"/>
                     <toolbarItems/>
@@ -181,7 +182,6 @@
                         <segue destination="2" kind="relationship" relationship="rootViewController" id="zaF-c6-UNR"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vOb-gn-Bt7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1140" y="-3358.75"/>
         </scene>
@@ -199,7 +199,6 @@
                     </tabBar>
                     <connections>
                         <segue destination="5D7-fp-3iF" kind="relationship" relationship="viewControllers" id="vKg-Ga-thw"/>
-                        <segue destination="gcK-hO-ozh" kind="relationship" relationship="viewControllers" id="WjY-zb-cX6"/>
                         <segue destination="gjq-FW-yKe" kind="relationship" relationship="viewControllers" id="TpR-0X-I5h"/>
                         <segue destination="Vs2-nt-5Un" kind="relationship" relationship="viewControllers" id="Cmp-rA-yDp"/>
                     </connections>
