--- a/Wigo/en.lproj/Main.storyboard
+++ b/Wigo/en.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CqT-lH-jAT">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CqT-lH-jAT">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="gUF-KZ-UXe">
                                     <size key="itemSize" width="100" height="100"/>
@@ -118,6 +118,10 @@
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="CqT-lH-jAT" secondAttribute="trailing" id="Yqr-8q-QSk"/>
+                            <constraint firstItem="CqT-lH-jAT" firstAttribute="leading" secondItem="VbK-jd-SdY" secondAttribute="leadingMargin" id="ziV-lh-DeI"/>
+                        </constraints>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="480"/>
